feat(dao): complete DAO package with encryption-agnostic design
Implements the final 3 DAOs (MailDAO, DraftDAO, AttachmentDAO) and closes
the dao package at 10 DAOs + SqliteConnectionProvider, alongside supporting
changes to util and exception discovered while resolving encryption
ownership across layers.

SqliteConnectionProvider:
- Add ensureDbDirectoryExists() so first-run on a clean machine doesn't
  fail with SQLITE_CANTOPEN
- Add close() for application shutdown
- All 10 DAOs now synchronize on the shared connectionProvider instance
  around every statement execution, guarding the single shared Connection
  against concurrent access from parallel facade Tasks

DAO layer:
- AccountDAO, LabelDAO, MailLabelDAO, MailAddressDAO, DraftAddressDAO,
  MailDAO, DraftDAO, AttachmentDAO implemented
- Removed SecretKey from every DAO method signature. DAOs now receive and
  return encrypted fields (bodyPlainText, bodyHTML, accessToken,
  refreshToken) as opaque, already-encrypted Strings — resolving the
  contradiction in the original design, where DAOs claimed to not know
  SecurityUtil while still receiving a SecretKey they had no use for
- AttachmentDAO gains updateFilePath(), closing the on-demand download
  flow: metadata is inserted with a null filePath during sync, and this
  method persists the path once FileUtil finishes writing the encrypted
  file to disk
- insertBatch (MailAddressDAO, DraftAddressDAO) wrapped in a manual
  transaction (setAutoCommit(false) + commit()/rollback()) for atomicity

util:
- SecurityUtil: added byte[] overloads of encrypt/decrypt for attachment
  binary content, avoiding the ~33% Base64 overhead a String-only API
  would force; String overloads refactored into thin wrappers around the
  byte[] versions to remove duplicated GCM logic; replaced
  SecureRandom.getInstanceStrong() (blocking on some platforms) with a
  reused SecureRandom instance for IV generation
- FileUtil implemented: validateSize, exists, resolveOrThrow,
  detectMimeT